fix alignment of screenshot logo text

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -46,7 +46,7 @@ html {
 
       position: fixed;
       left: 5px;
-      bottom: 2px;
+      bottom: 3px;
 
       &:active, &:hover, &:visited {
         color: inherit;
